Source/WebCore/dom/CharacterData.cpp
@@ -38,15 +38,26 @@
 
 namespace WebCore {
 
+static bool canUseSetDataOptimization(const CharacterData& node)
+{
+    auto& document = node.document();
+    return !document.hasListenerType(Document::DOMCHARACTERDATAMODIFIED_LISTENER) && !document.hasMutationObserversOfType(MutationObserver::CharacterData)
+        && !document.hasListenerType(Document::DOMSUBTREEMODIFIED_LISTENER);
+}
+
 void CharacterData::setData(const String& data)
 {
     const String& nonNullData = !data.isNull() ? data : emptyString();
-    if (m_data == nonNullData)
+    unsigned oldLength = length();
+
+    if (m_data == nonNullData && canUseSetDataOptimization(*this)) {
+        document().textRemoved(this, 0, oldLength);
+        if (document().frame())
+            document().frame()->selection().textWasReplaced(this, 0, oldLength, oldLength);
         return;
+    }
 
     Ref<CharacterData> protectedThis(*this);
-
-    unsigned oldLength = length();
 
     setDataAndUpdate(nonNullData, 0, oldLength, nonNullData.length());
     document().textRemoved(this, 0, oldLength);
